[package]
name = "llm-guardrails-core"
version = "0.2.0"
edition = "2021"
description = "High-performance Rust core for the LLM Guardrails toolkit"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
regex = "1"
once_cell = "1"
serde_json = "1"
