[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_guardrails"
version = "0.1.0"
description = "Responsible AI toolkit for LLM applications -- PII redaction, prompt injection detection, bias scoring, and output validation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Melroy Anthony" },
]
keywords = ["llm", "guardrails", "responsible-ai", "pii", "gdpr", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.4,<1.0",
]

[project.urls]
Repository = "https://github.com/melroyanthony/llm-guardrails"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
